--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -14,128 +14,10 @@
     text-align: right;
     font-size: 24px;
 }
-#siete{
-    height: 150px;
-    width: 150px;
+.boton{
     grid-column: span 1;
     border: 1px solid;
     grid-row: span 1;
-    
+    background-color: rgb(204, 204, 196);  
 }
 
-#ocho{
-    
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;
-    
-}
-#nueve{
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;
-   
-}
-#dividir{
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;
-    
-}
-#seis{
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;
-    
-}
-#cinco{
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;
-    
-}
-#cuatro{
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;
-    
-}
-#tres{
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;
-    
-}
-#dos{
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;   
-}
-#uno{
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;
-  
-}
-#cero{
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;
-    
-}
-#mas{
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;
-    
-}
-#menos{
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;
-}
-#multiplicar{
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;
-}
-#punto{
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;
-}
-#igual{
-    height: 150px;
-    width: 150px;
-    grid-column: span 1;
-    border: 1px solid;
-    grid-row: span 1;
-}
